refactor: companyID -> Id
